tests/ui/borrowck/borrowck-if-elseif-else-uninitialezed.stderr
error[E0381]: used binding `internal_code` isn't initialized on any path leading to this point
  --> $DIR/borrowck-if-elseif-else-uninitialezed.rs:9:55
   |
LL |     let internal_code: u32;
   |         ------------- binding declared here but left uninitialized
...
LL |         } else if access_level == 2 {
   |                   ----------------- if this condition is `true`, `internal_code` is not initialized
LL |             println!("Admin access pending for code: {internal_code}");
   |                                                       ^^^^^^^^^^^^^ `internal_code` used here but it isn't initialized on any path leading to this point
   |
   = note: when checking initialization, the compiler describes possible control-flow paths without evaluating whether branch conditions can actually have the values shown
help: consider assigning a value
   |
LL |     let internal_code: u32 = 42;
   |                            ++++

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0381`.
